--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
       href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2:wght@400;500;600;700;800&family=Philosopher:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/assets/images/logo/logo-briliant.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Brilliant Umrah</title>
   </head>
   <body>
     <div id="root"></div>
